# texmacs

./: .gitignore
src/: CMakeLists.txt  COMPILE.cmake  Makefile.in  configure  configure.in  setup_build_env.sh
src/TeXmacs/progs/: tm-mode.el
src/TeXmacs/progs/generic/: document-part.scm
src/TeXmacs/progs/kernel/texmacs/: tm-define.scm
src/cmake/: FindGuile.cmake
src/misc/m4/: qt5.m4  tm_gui.m4  tm_platform.m4
src/misc/scripts/: texmacs.in
src/plugins/maple/: CMakeLists.txt
src/plugins/r/src/: tm_r.c
src/src/: CMakeLists.txt
src/src/Edit/: editor.hpp
src/src/Edit/Editor/: edit_main.cpp
src/src/Plugins/Qt/: QTMWidget.cpp
src/src/Style/Evaluate/: evaluate_main.hpp  evaluate_rewrite.cpp
src/src/System/: config.h.cmake  tm_configure.hpp.cmake  tm_configure.in
src/src/System/Misc/: sys_utils.cpp  sys_utils.hpp
src/src/Texmacs/Server/: tm_server.cpp
